@@ -5,9 +5,10 @@ package com.dabomstew.pkrandom;
 /*--                  randomizer to determine how to randomize the          --*/
 /*--                  target game.                                          --*/
 /*--                                                                        --*/
-/*--  Part of "Universal Pokemon Randomizer" by Dabomstew                   --*/
+/*--  Part of "Universal Pokemon Randomizer ZX" by the UPR-ZX team          --*/
+/*--  Originally part of "Universal Pokemon Randomizer" by Dabomstew        --*/
 /*--  Pokemon and any associated names and the like are                     --*/
-/*--  trademark and (C) Nintendo 1996-2012.                                 --*/
+/*--  trademark and (C) Nintendo 1996-2020.                                 --*/
 /*--                                                                        --*/
 /*--  The custom code written here is licensed under the terms of the GPL:  --*/
 /*--                                                                        --*/
@@ -31,11 +32,11 @@ import java.io.FileOutputStream;
 import java.io.IOException;
 import java.io.UnsupportedEncodingException;
 import java.nio.ByteBuffer;
+import java.util.Base64;
 import java.util.List;
 import java.util.zip.CRC32;
 
-import javax.xml.bind.DatatypeConverter;
-
+import com.dabomstew.pkrandom.pokemon.ExpCurve;
 import com.dabomstew.pkrandom.pokemon.GenRestrictions;
 import com.dabomstew.pkrandom.pokemon.Pokemon;
 import com.dabomstew.pkrandom.romhandlers.Gen1RomHandler;
@@ -46,9 +47,9 @@ import com.dabomstew.pkrandom.romhandlers.RomHandler;
 
 public class Settings {
 
-    public static final int VERSION = 172;
+    public static final int VERSION = Version.VERSION;
 
-    public static final int LENGTH_OF_SETTINGS_DATA = 36;
+    public static final int LENGTH_OF_SETTINGS_DATA = 48;
 
     private CustomNamesSet customNames;
 
@@ -59,6 +60,7 @@ public class Settings {
 
     private boolean changeImpossibleEvolutions;
     private boolean makeEvolutionsEasier;
+    private boolean removeTimeBasedEvolutions;
     private boolean raceMode;
     private boolean blockBrokenMoves;
     private boolean limitPokemon;
@@ -67,10 +69,18 @@ public class Settings {
         UNCHANGED, SHUFFLE, RANDOM,
     }
 
+    public enum ExpCurveMod {
+        LEGENDARIES, STRONG_LEGENDARIES, ALL
+    }
+
     private BaseStatisticsMod baseStatisticsMod = BaseStatisticsMod.UNCHANGED;
-    private boolean standardizeEXPCurves;
     private boolean baseStatsFollowEvolutions;
+    private boolean baseStatsFollowMegaEvolutions;
     private boolean updateBaseStats;
+    private int updateBaseStatsToGeneration;
+    private boolean standardizeEXPCurves;
+    private ExpCurve selectedEXPCurve;
+    private ExpCurveMod expCurveMod = ExpCurveMod.LEGENDARIES;
 
     public enum AbilitiesMod {
         UNCHANGED, RANDOMIZE
@@ -79,19 +89,25 @@ public class Settings {
     private AbilitiesMod abilitiesMod = AbilitiesMod.UNCHANGED;
     private boolean allowWonderGuard = true;
     private boolean abilitiesFollowEvolutions;
+    private boolean abilitiesFollowMegaEvolutions;
     private boolean banTrappingAbilities;
     private boolean banNegativeAbilities;
+    private boolean banBadAbilities;
+    private boolean weighDuplicateAbilitiesTogether;
 
     public enum StartersMod {
         UNCHANGED, CUSTOM, COMPLETELY_RANDOM, RANDOM_WITH_TWO_EVOLUTIONS
     }
 
     private StartersMod startersMod = StartersMod.UNCHANGED;
+    private boolean allowStarterAltFormes;
 
     // index in the rom's list of pokemon
     // offset from the dropdown index from RandomizerGUI by 1
     private int[] customStarters = new int[3];
     private boolean randomizeStartersHeldItems;
+    private boolean limitMusketeers;
+    private boolean limit600;
     private boolean banBadRandomStarterHeldItems;
 
     public enum TypesMod {
@@ -99,6 +115,8 @@ public class Settings {
     }
 
     private TypesMod typesMod = TypesMod.UNCHANGED;
+
+    private boolean typesFollowMegaEvolutions;
 
     // Evolutions
     public enum EvolutionsMod {
@@ -110,6 +128,7 @@ public class Settings {
     private boolean evosSameTyping;
     private boolean evosMaxThreeStages;
     private boolean evosForceChange;
+    private boolean evosAllowAltFormes;
 
     // Move data
     private boolean randomizeMovePowers;
@@ -118,6 +137,7 @@ public class Settings {
     private boolean randomizeMoveTypes;
     private boolean randomizeMoveCategory;
     private boolean updateMoves;
+    private int updateMovesToGeneration;
     private boolean updateMovesLegacy;
 
     public enum MovesetsMod {
@@ -125,13 +145,16 @@ public class Settings {
     }
 
     private MovesetsMod movesetsMod = MovesetsMod.UNCHANGED;
-    private boolean startWithFourMoves;
+    private boolean startWithGuaranteedMoves;
+    private int guaranteedMoveCount = 2;
     private boolean reorderDamagingMoves;
     private boolean movesetsForceGoodDamaging;
     private int movesetsGoodDamagingPercent = 0;
+    private boolean blockBrokenMovesetMoves;
+    private boolean evolutionMovesForAll;
 
     public enum TrainersMod {
-        UNCHANGED, RANDOM, TYPE_THEMED
+        UNCHANGED, RANDOM, DISTRIBUTED, MAINPLAYTHROUGH, TYPE_THEMED
     }
 
     private TrainersMod trainersMod = TrainersMod.UNCHANGED;
@@ -140,12 +163,21 @@ public class Settings {
     private boolean trainersMatchTypingDistribution;
     private boolean trainersBlockLegendaries = true;
     private boolean trainersBlockEarlyWonderGuard = true;
+    private boolean trainersEnforceDistribution;
+    private boolean trainersEnforceMainPlaythrough;
     private boolean randomizeTrainerNames;
     private boolean randomizeTrainerClassNames;
     private boolean trainersForceFullyEvolved;
     private int trainersForceFullyEvolvedLevel = 30;
     private boolean trainersLevelModified;
     private int trainersLevelModifier = 0; // -50 ~ 50
+    private boolean allowTrainerAlternateFormes;
+    private boolean swapTrainerMegaEvos;
+    private int additionalBossTrainerPokemon = 0;
+    private int additionalImportantTrainerPokemon = 0;
+    private int additionalRegularTrainerPokemon = 0;
+    private boolean doubleBattleMode;
+    private boolean shinyChance;
 
     public enum WildPokemonMod {
         UNCHANGED, RANDOM, AREA_MAPPING, GLOBAL_MAPPING
@@ -163,12 +195,41 @@ public class Settings {
     private int minimumCatchRateLevel = 1;
     private boolean randomizeWildPokemonHeldItems;
     private boolean banBadRandomWildPokemonHeldItems;
+    private boolean balanceShakingGrass;
+    private boolean wildLevelsModified;
+    private int wildLevelModifier = 0;
+    private boolean allowWildAltFormes;
 
     public enum StaticPokemonMod {
-        UNCHANGED, RANDOM_MATCHING, COMPLETELY_RANDOM
+        UNCHANGED, RANDOM_MATCHING, COMPLETELY_RANDOM, SIMILAR_STRENGTH
     }
 
     private StaticPokemonMod staticPokemonMod = StaticPokemonMod.UNCHANGED;
+
+    private boolean allowStaticAltFormes;
+    private boolean swapStaticMegaEvos;
+    private boolean staticLevelModified;
+    private int staticLevelModifier = 0; // -50 ~ 50
+
+    public enum TotemPokemonMod {
+        UNCHANGED, RANDOM, SIMILAR_STRENGTH
+    }
+
+    public enum AllyPokemonMod {
+        UNCHANGED, RANDOM, SIMILAR_STRENGTH
+    }
+
+    public enum AuraMod {
+        UNCHANGED, RANDOM, SAME_STRENGTH
+    }
+
+    private TotemPokemonMod totemPokemonMod = TotemPokemonMod.UNCHANGED;
+    private AllyPokemonMod allyPokemonMod = AllyPokemonMod.UNCHANGED;
+    private AuraMod auraMod = AuraMod.UNCHANGED;
+    private boolean randomizeTotemHeldItems;
+    private boolean totemLevelsModified;
+    private int totemLevelModifier = 0;
+    private boolean allowTotemAltFormes;
 
     public enum TMsMod {
         UNCHANGED, RANDOM
@@ -180,6 +241,7 @@ public class Settings {
     private boolean fullHMCompat;
     private boolean tmsForceGoodDamaging;
     private int tmsGoodDamagingPercent = 0;
+    private boolean blockBrokenTMMoves;
 
     public enum TMsHMsCompatibilityMod {
         UNCHANGED, RANDOM_PREFER_TYPE, COMPLETELY_RANDOM, FULL
@@ -196,6 +258,7 @@ public class Settings {
     private boolean keepFieldMoveTutors;
     private boolean tutorsForceGoodDamaging;
     private int tutorsGoodDamagingPercent = 0;
+    private boolean blockBrokenTutorMoves;
 
     public enum MoveTutorsCompatibilityMod {
         UNCHANGED, RANDOM_PREFER_TYPE, COMPLETELY_RANDOM, FULL
@@ -214,26 +277,53 @@ public class Settings {
     private boolean randomizeInGameTradesItems;
 
     public enum FieldItemsMod {
-        UNCHANGED, SHUFFLE, RANDOM
+        UNCHANGED, SHUFFLE, RANDOM, RANDOM_EVEN
     }
 
     private FieldItemsMod fieldItemsMod = FieldItemsMod.UNCHANGED;
     private boolean banBadRandomFieldItems;
 
+    public enum ShopItemsMod {
+        UNCHANGED, SHUFFLE, RANDOM
+    }
+
+    private ShopItemsMod shopItemsMod = ShopItemsMod.UNCHANGED;
+    private boolean banBadRandomShopItems;
+    private boolean banRegularShopItems;
+    private boolean banOPShopItems;
+    private boolean balanceShopPrices;
+    private boolean guaranteeEvolutionItems;
+    private boolean guaranteeXItems;
+
     // to and from strings etc
     public void write(FileOutputStream out) throws IOException {
-        out.write(VERSION);
         byte[] settings = toString().getBytes("UTF-8");
-        out.write(settings.length);
-        out.write(settings);
+        ByteBuffer buf = ByteBuffer.allocate(settings.length + 8);
+        buf.putInt(VERSION);
+        buf.putInt(settings.length);
+        buf.put(settings);
+        out.write(buf.array());
     }
 
     public static Settings read(FileInputStream in) throws IOException, UnsupportedOperationException {
-        int version = in.read();
+        byte[] versionBytes = new byte[4];
+        byte[] lengthBytes = new byte[4];
+        int nread = in.read(versionBytes);
+        if (nread < 4) {
+            throw new UnsupportedOperationException("Error reading version number from settings string.");
+        }
+        int version = ByteBuffer.wrap(versionBytes).getInt();
+        if (((version >> 24) & 0xFF) > 0 && ((version >> 24) & 0xFF) <= 172) {
+            throw new UnsupportedOperationException("The settings file is old and must be updated. Press Settings -> \"Update Pre-3.0.0 Settings File\" to update.");
+        }
         if (version > VERSION) {
             throw new UnsupportedOperationException("Cannot read settings from a newer version of the randomizer.");
         }
-        int length = in.read();
+        nread = in.read(lengthBytes);
+        if (nread < 4) {
+            throw new UnsupportedOperationException("Error reading settings length from settings string.");
+        }
+        int length = ByteBuffer.wrap(lengthBytes).getInt();
         byte[] buffer = FileFunctions.readFullyIntoBuffer(in, length);
         String settings = new String(buffer, "UTF-8");
         boolean oldUpdate = false;
@@ -254,27 +344,28 @@ public class Settings {
 
         // 0: general options #1 + trainer/class names
         out.write(makeByteSelected(changeImpossibleEvolutions, updateMoves, updateMovesLegacy, randomizeTrainerNames,
-                randomizeTrainerClassNames, makeEvolutionsEasier));
+                randomizeTrainerClassNames, makeEvolutionsEasier, removeTimeBasedEvolutions));
 
         // 1: pokemon base stats & abilities
         out.write(makeByteSelected(baseStatsFollowEvolutions, baseStatisticsMod == BaseStatisticsMod.RANDOM,
                 baseStatisticsMod == BaseStatisticsMod.SHUFFLE, baseStatisticsMod == BaseStatisticsMod.UNCHANGED,
-                standardizeEXPCurves, updateBaseStats));
+                standardizeEXPCurves, updateBaseStats, baseStatsFollowMegaEvolutions));
 
         // 2: pokemon types & more general options
         out.write(makeByteSelected(typesMod == TypesMod.RANDOM_FOLLOW_EVOLUTIONS,
                 typesMod == TypesMod.COMPLETELY_RANDOM, typesMod == TypesMod.UNCHANGED, raceMode, blockBrokenMoves,
-                limitPokemon));
+                limitPokemon, typesFollowMegaEvolutions));
 
         // 3: v171: changed to the abilities byte
 
         out.write(makeByteSelected(abilitiesMod == AbilitiesMod.UNCHANGED, abilitiesMod == AbilitiesMod.RANDOMIZE,
-                allowWonderGuard, abilitiesFollowEvolutions, banTrappingAbilities, banNegativeAbilities));
+                allowWonderGuard, abilitiesFollowEvolutions, banTrappingAbilities, banNegativeAbilities, banBadAbilities,
+                abilitiesFollowMegaEvolutions));
 
         // 4: starter pokemon stuff
         out.write(makeByteSelected(startersMod == StartersMod.CUSTOM, startersMod == StartersMod.COMPLETELY_RANDOM,
                 startersMod == StartersMod.UNCHANGED, startersMod == StartersMod.RANDOM_WITH_TWO_EVOLUTIONS,
-                randomizeStartersHeldItems, banBadRandomStarterHeldItems));
+                randomizeStartersHeldItems, banBadRandomStarterHeldItems, allowStarterAltFormes));
 
         // @5 dropdowns
         write2ByteInt(out, customStarters[0] - 1);
@@ -284,17 +375,20 @@ public class Settings {
         // 11 movesets
         out.write(makeByteSelected(movesetsMod == MovesetsMod.COMPLETELY_RANDOM,
                 movesetsMod == MovesetsMod.RANDOM_PREFER_SAME_TYPE, movesetsMod == MovesetsMod.UNCHANGED,
-                movesetsMod == MovesetsMod.METRONOME_ONLY, startWithFourMoves, reorderDamagingMoves));
+                movesetsMod == MovesetsMod.METRONOME_ONLY, startWithGuaranteedMoves, reorderDamagingMoves)
+                | ((guaranteedMoveCount - 2) << 6));
 
         // 12 movesets good damaging
         out.write((movesetsForceGoodDamaging ? 0x80 : 0) | movesetsGoodDamagingPercent);
 
         // 13 trainer pokemon
         // changed 160
-        out.write(makeByteSelected(trainersUsePokemonOfSimilarStrength, trainersMod == TrainersMod.RANDOM,
-                rivalCarriesStarterThroughout, trainersMod == TrainersMod.TYPE_THEMED, trainersMatchTypingDistribution,
-                trainersMod == TrainersMod.UNCHANGED, trainersBlockLegendaries, trainersBlockEarlyWonderGuard));
-
+        out.write(makeByteSelected(trainersMod == TrainersMod.UNCHANGED,
+                trainersMod == TrainersMod.RANDOM,
+                trainersMod == TrainersMod.DISTRIBUTED,
+                trainersMod == TrainersMod.MAINPLAYTHROUGH,
+                trainersMod == TrainersMod.TYPE_THEMED));
+        
         // 14 trainer pokemon force evolutions
         out.write((trainersForceFullyEvolved ? 0x80 : 0) | trainersForceFullyEvolvedLevel);
 
@@ -310,13 +404,15 @@ public class Settings {
         // bugfix 161
         out.write(makeByteSelected(useMinimumCatchRate, blockWildLegendaries,
                 wildPokemonRestrictionMod == WildPokemonRestrictionMod.SIMILAR_STRENGTH, randomizeWildPokemonHeldItems,
-                banBadRandomWildPokemonHeldItems)
+                banBadRandomWildPokemonHeldItems, false, false, balanceShakingGrass)
                 | ((minimumCatchRateLevel - 1) << 5));
 
         // 17 static pokemon
         out.write(makeByteSelected(staticPokemonMod == StaticPokemonMod.UNCHANGED,
                 staticPokemonMod == StaticPokemonMod.RANDOM_MATCHING,
-                staticPokemonMod == StaticPokemonMod.COMPLETELY_RANDOM));
+                staticPokemonMod == StaticPokemonMod.COMPLETELY_RANDOM,
+                staticPokemonMod == StaticPokemonMod.SIMILAR_STRENGTH,
+                limitMusketeers, limit600, allowStaticAltFormes, swapStaticMegaEvos));
 
         // 18 tm randomization
         // new stuff 162
@@ -353,7 +449,7 @@ public class Settings {
 
         // 24 field items
         out.write(makeByteSelected(fieldItemsMod == FieldItemsMod.RANDOM, fieldItemsMod == FieldItemsMod.SHUFFLE,
-                fieldItemsMod == FieldItemsMod.UNCHANGED, banBadRandomFieldItems));
+                fieldItemsMod == FieldItemsMod.UNCHANGED, banBadRandomFieldItems, fieldItemsMod == FieldItemsMod.RANDOM_EVEN));
 
         // new 170
         // 25 move randomizers
@@ -362,9 +458,20 @@ public class Settings {
 
         // 26 evolutions
         out.write(makeByteSelected(evolutionsMod == EvolutionsMod.UNCHANGED, evolutionsMod == EvolutionsMod.RANDOM,
-                evosSimilarStrength, evosSameTyping, evosMaxThreeStages, evosForceChange));
+                evosSimilarStrength, evosSameTyping, evosMaxThreeStages, evosForceChange, evosAllowAltFormes));
+        
+        // 27 pokemon trainer misc
+        out.write(makeByteSelected(trainersUsePokemonOfSimilarStrength, 
+                rivalCarriesStarterThroughout,
+                trainersMatchTypingDistribution,
+                trainersBlockLegendaries,
+                trainersBlockEarlyWonderGuard,
+                swapTrainerMegaEvos,
+                shinyChance));
 
-        // @ 27 pokemon restrictions
+        
+
+        // @ 28 pokemon restrictions
         try {
             if (currentRestrictions != null) {
                 writeFullInt(out, currentRestrictions.toInt());
@@ -372,24 +479,74 @@ public class Settings {
                 writeFullInt(out, 0);
             }
         } catch (IOException e) {
+            e.printStackTrace(); // better than nothing
         }
+        
+
 
         // @ 31 misc tweaks
         try {
             writeFullInt(out, currentMiscTweaks);
         } catch (IOException e) {
-
+            e.printStackTrace(); // better than nothing
         }
 
         // @ 35 trainer pokemon level modifier
         out.write((trainersLevelModified ? 0x80 : 0) | (trainersLevelModifier+50));
 
+        out.write(makeByteSelected(shopItemsMod == ShopItemsMod.RANDOM, shopItemsMod == ShopItemsMod.SHUFFLE,
+                shopItemsMod == ShopItemsMod.UNCHANGED, banBadRandomShopItems, banRegularShopItems, banOPShopItems, balanceShopPrices, guaranteeEvolutionItems));
+
+        out.write((wildLevelsModified ? 0x80 : 0) | (wildLevelModifier+50));
+
+        out.write(makeByteSelected(
+                expCurveMod == ExpCurveMod.LEGENDARIES,
+                expCurveMod == ExpCurveMod.STRONG_LEGENDARIES,
+                expCurveMod == ExpCurveMod.ALL,
+                blockBrokenMovesetMoves,
+                blockBrokenTMMoves,
+                blockBrokenTutorMoves,
+                allowTrainerAlternateFormes,
+                allowWildAltFormes));
+
+        out.write((doubleBattleMode ? 0x1 : 0) |
+                (additionalBossTrainerPokemon << 1) |
+                (additionalImportantTrainerPokemon << 4) |
+                (weighDuplicateAbilitiesTogether ? 0x80 : 0));
+
+        out.write(additionalRegularTrainerPokemon |
+                ((auraMod == AuraMod.UNCHANGED) ? 0x8 : 0) |
+                ((auraMod == AuraMod.RANDOM) ? 0x10 : 0) |
+                ((auraMod == AuraMod.SAME_STRENGTH) ? 0x20 : 0) |
+                (evolutionMovesForAll ? 0x40 : 0) |
+                (guaranteeXItems ? 0x80 : 0));
+
+        out.write(makeByteSelected(
+                totemPokemonMod == TotemPokemonMod.UNCHANGED,
+                totemPokemonMod == TotemPokemonMod.RANDOM,
+                totemPokemonMod == TotemPokemonMod.SIMILAR_STRENGTH,
+                allyPokemonMod == AllyPokemonMod.UNCHANGED,
+                allyPokemonMod == AllyPokemonMod.RANDOM,
+                allyPokemonMod == AllyPokemonMod.SIMILAR_STRENGTH,
+                randomizeTotemHeldItems,
+                allowTotemAltFormes
+        ));
+
+        out.write((totemLevelsModified ? 0x80 : 0) | (totemLevelModifier+50));
+
+        // These two get a byte each for future proofing
+        out.write(updateBaseStatsToGeneration);
+
+        out.write(updateMovesToGeneration);
+
+        out.write(selectedEXPCurve.toByte());
+
+        out.write((staticLevelModified ? 0x80 : 0) | (staticLevelModifier+50));
+
         try {
             byte[] romName = this.romName.getBytes("US-ASCII");
             out.write(romName.length);
             out.write(romName);
-        } catch (UnsupportedEncodingException e) {
-            out.write(0);
         } catch (IOException e) {
             out.write(0);
         }
@@ -402,13 +559,14 @@ public class Settings {
             writeFullInt(out, (int) checksum.getValue());
             writeFullInt(out, FileFunctions.getFileChecksum(SysConstants.customNamesFile));
         } catch (IOException e) {
+            e.printStackTrace(); // better than nothing
         }
 
-        return DatatypeConverter.printBase64Binary(out.toByteArray());
+        return Base64.getEncoder().encodeToString(out.toByteArray());
     }
 
-    public static Settings fromString(String settingsString) throws UnsupportedEncodingException {
-        byte[] data = DatatypeConverter.parseBase64Binary(settingsString);
+    public static Settings fromString(String settingsString) throws UnsupportedEncodingException, IllegalArgumentException {
+        byte[] data = Base64.getDecoder().decode(settingsString);
         checkChecksum(data);
 
         Settings settings = new Settings();
@@ -420,6 +578,7 @@ public class Settings {
         settings.setRandomizeTrainerNames(restoreState(data[0], 3));
         settings.setRandomizeTrainerClassNames(restoreState(data[0], 4));
         settings.setMakeEvolutionsEasier(restoreState(data[0], 5));
+        settings.setRemoveTimeBasedEvolutions(restoreState(data[0], 6));
 
         settings.setBaseStatisticsMod(restoreEnum(BaseStatisticsMod.class, data[1], 3, // UNCHANGED
                 2, // SHUFFLE
@@ -428,6 +587,7 @@ public class Settings {
         settings.setStandardizeEXPCurves(restoreState(data[1], 4));
         settings.setBaseStatsFollowEvolutions(restoreState(data[1], 0));
         settings.setUpdateBaseStats(restoreState(data[1], 5));
+        settings.setBaseStatsFollowMegaEvolutions(restoreState(data[1],6));
 
         settings.setTypesMod(restoreEnum(TypesMod.class, data[2], 2, // UNCHANGED
                 0, // RANDOM_FOLLOW_EVOLUTIONS
@@ -436,6 +596,7 @@ public class Settings {
         settings.setRaceMode(restoreState(data[2], 3));
         settings.setBlockBrokenMoves(restoreState(data[2], 4));
         settings.setLimitPokemon(restoreState(data[2], 5));
+        settings.setTypesFollowMegaEvolutions(restoreState(data[2],6));
 
         settings.setAbilitiesMod(restoreEnum(AbilitiesMod.class, data[3], 0, // UNCHANGED
                 1 // RANDOMIZE
@@ -444,6 +605,8 @@ public class Settings {
         settings.setAbilitiesFollowEvolutions(restoreState(data[3], 3));
         settings.setBanTrappingAbilities(restoreState(data[3], 4));
         settings.setBanNegativeAbilities(restoreState(data[3], 5));
+        settings.setBanBadAbilities(restoreState(data[3], 6));
+        settings.setAbilitiesFollowMegaEvolutions(restoreState(data[3],7));
 
         settings.setStartersMod(restoreEnum(StartersMod.class, data[4], 2, // UNCHANGED
                 0, // CUSTOM
@@ -452,6 +615,7 @@ public class Settings {
         ));
         settings.setRandomizeStartersHeldItems(restoreState(data[4], 4));
         settings.setBanBadRandomStarterHeldItems(restoreState(data[4], 5));
+        settings.setAllowStarterAltFormes(restoreState(data[4],6));
 
         settings.setCustomStarters(new int[] { FileFunctions.read2ByteInt(data, 5) + 1,
                 FileFunctions.read2ByteInt(data, 7) + 1, FileFunctions.read2ByteInt(data, 9) + 1 });
@@ -461,22 +625,20 @@ public class Settings {
                 0, // COMPLETELY_RANDOM
                 3 // METRONOME_ONLY
         ));
-        settings.setStartWithFourMoves(restoreState(data[11], 4));
+        settings.setStartWithGuaranteedMoves(restoreState(data[11], 4));
         settings.setReorderDamagingMoves(restoreState(data[11], 5));
+        settings.setGuaranteedMoveCount(((data[11] & 0xC0) >> 6) + 2);
 
         settings.setMovesetsForceGoodDamaging(restoreState(data[12], 7));
         settings.setMovesetsGoodDamagingPercent(data[12] & 0x7F);
 
         // changed 160
-        settings.setTrainersMod(restoreEnum(TrainersMod.class, data[13], 5, // UNCHANGED
+        settings.setTrainersMod(restoreEnum(TrainersMod.class, data[13], 0, // UNCHANGED
                 1, // RANDOM
-                3 // TYPE_THEMED
+                2, // DISTRIBUTED
+                3, // MAINPLAYTHROUGH 
+                4 // TYPE_THEMED
         ));
-        settings.setTrainersUsePokemonOfSimilarStrength(restoreState(data[13], 0));
-        settings.setRivalCarriesStarterThroughout(restoreState(data[13], 2));
-        settings.setTrainersMatchTypingDistribution(restoreState(data[13], 4));
-        settings.setTrainersBlockLegendaries(restoreState(data[13], 6));
-        settings.setTrainersBlockEarlyWonderGuard(restoreState(data[13], 7));
 
         settings.setTrainersForceFullyEvolved(restoreState(data[14], 7));
         settings.setTrainersForceFullyEvolvedLevel(data[14] & 0x7F);
@@ -499,12 +661,19 @@ public class Settings {
         settings.setBanBadRandomWildPokemonHeldItems(restoreState(data[16], 4));
 
         settings.setMinimumCatchRateLevel(((data[16] & 0x60) >> 5) + 1);
+        settings.setBalanceShakingGrass(restoreState(data[16], 7));
 
         settings.setStaticPokemonMod(restoreEnum(StaticPokemonMod.class, data[17], 0, // UNCHANGED
                 1, // RANDOM_MATCHING
-                2 // COMPLETELY_RANDOM
+                2, // COMPLETELY_RANDOM
+                3  // SIMILAR_STRENGTH 
         ));
-
+        
+        settings.setLimitMusketeers(restoreState(data[17], 4));
+        settings.setLimit600(restoreState(data[17], 5));
+        settings.setAllowStaticAltFormes(restoreState(data[17], 6));
+        settings.setSwapStaticMegaEvos(restoreState(data[17], 7));
+        
         settings.setTmsMod(restoreEnum(TMsMod.class, data[18], 4, // UNCHANGED
                 3 // RANDOM
         ));
@@ -512,7 +681,7 @@ public class Settings {
                 1, // RANDOM_PREFER_TYPE
                 0, // COMPLETELY_RANDOM
                 7 // FULL
-        ));
+        )); 
         settings.setTmLevelUpMoveSanity(restoreState(data[18], 5));
         settings.setKeepFieldMoveTMs(restoreState(data[18], 6));
         settings.setFullHMCompat(restoreState(data[19], 0));
@@ -544,9 +713,11 @@ public class Settings {
         settings.setRandomizeInGameTradesNicknames(restoreState(data[23], 4));
         settings.setRandomizeInGameTradesOTs(restoreState(data[23], 5));
 
-        settings.setFieldItemsMod(restoreEnum(FieldItemsMod.class, data[24], 2, // UNCHANGED
-                1, // SHUFFLE
-                0 // RANDOM
+        settings.setFieldItemsMod(restoreEnum(FieldItemsMod.class, data[24],  
+                2,  // UNCHANGED
+                1,  // SHUFFLE
+                0,  // RANDOM
+                4   // RANDOM_EVEN
         ));
         settings.setBanBadRandomFieldItems(restoreState(data[24], 3));
 
@@ -564,21 +735,80 @@ public class Settings {
         settings.setEvosSameTyping(restoreState(data[26], 3));
         settings.setEvosMaxThreeStages(restoreState(data[26], 4));
         settings.setEvosForceChange(restoreState(data[26], 5));
+        settings.setEvosAllowAltFormes(restoreState(data[26],6));
 
+        // new pokemon trainer misc
+        settings.setTrainersUsePokemonOfSimilarStrength(restoreState(data[27], 0));
+        settings.setRivalCarriesStarterThroughout(restoreState(data[27], 1));
+        settings.setTrainersMatchTypingDistribution(restoreState(data[27], 2));
+        settings.setTrainersBlockLegendaries(restoreState(data[27], 3));
+        settings.setTrainersBlockEarlyWonderGuard(restoreState(data[27], 4));
+        settings.setSwapTrainerMegaEvos(restoreState(data[27], 5));
+        settings.setShinyChance(restoreState(data[27], 6));
+
+        
         // gen restrictions
-        int genLimit = FileFunctions.readFullInt(data, 27);
+        int genLimit = FileFunctions.readFullInt(data, 28);
         GenRestrictions restrictions = null;
         if (genLimit != 0) {
             restrictions = new GenRestrictions(genLimit);
         }
         settings.setCurrentRestrictions(restrictions);
 
-        int codeTweaks = FileFunctions.readFullInt(data, 31);
+        int codeTweaks = FileFunctions.readFullInt(data, 32);
 
         settings.setCurrentMiscTweaks(codeTweaks);
 
-        settings.setTrainersLevelModified(restoreState(data[35], 7));
-        settings.setTrainersLevelModifier((data[35] & 0x7F) - 50);
+        settings.setTrainersLevelModified(restoreState(data[36], 7));
+        settings.setTrainersLevelModifier((data[36] & 0x7F) - 50);
+        //settings.setTrainersLevelModifier((data[36] & 0x7F));
+        settings.setShopItemsMod(restoreEnum(ShopItemsMod.class,data[37],
+                2,
+                1,
+                0));
+        settings.setBanBadRandomShopItems(restoreState(data[37],3));
+        settings.setBanRegularShopItems(restoreState(data[37],4));
+        settings.setBanOPShopItems(restoreState(data[37],5));
+        settings.setBalanceShopPrices(restoreState(data[37],6));
+        settings.setGuaranteeEvolutionItems(restoreState(data[37],7));
+
+        settings.setWildLevelsModified(restoreState(data[38],7));
+        settings.setWildLevelModifier((data[38] & 0x7F) - 50);
+
+        settings.setExpCurveMod(restoreEnum(ExpCurveMod.class,data[39],0,1,2));
+
+        settings.setBlockBrokenMovesetMoves(restoreState(data[39],3));
+        settings.setBlockBrokenTMMoves(restoreState(data[39],4));
+        settings.setBlockBrokenTutorMoves(restoreState(data[39],5));
+
+        settings.setAllowTrainerAlternateFormes(restoreState(data[39],6));
+        settings.setAllowWildAltFormes(restoreState(data[39],7));
+
+        settings.setDoubleBattleMode(restoreState(data[40], 0));
+        settings.setAdditionalBossTrainerPokemon((data[40] & 0xE) >> 1);
+        settings.setAdditionalImportantTrainerPokemon((data[40] & 0x70) >> 4);
+        settings.setWeighDuplicateAbilitiesTogether(restoreState(data[40], 7));
+
+        settings.setAdditionalRegularTrainerPokemon((data[41] & 0x7));
+        settings.setAuraMod(restoreEnum(AuraMod.class,data[41],3,4,5));
+        settings.setEvolutionMovesForAll(restoreState(data[41],6));
+        settings.setGuaranteeXItems(restoreState(data[41],7));
+
+        settings.setTotemPokemonMod(restoreEnum(TotemPokemonMod.class,data[42],0,1,2));
+        settings.setAllyPokemonMod(restoreEnum(AllyPokemonMod.class,data[42],3,4,5));
+        settings.setRandomizeTotemHeldItems(restoreState(data[42],6));
+        settings.setAllowTotemAltFormes(restoreState(data[42],7));
+        settings.setTotemLevelsModified(restoreState(data[43],7));
+        settings.setTotemLevelModifier((data[43] & 0x7F) - 50);
+
+        settings.setUpdateBaseStatsToGeneration(data[44]);
+
+        settings.setUpdateMovesToGeneration(data[45]);
+
+        settings.setSelectedEXPCurve(ExpCurve.fromByte(data[46]));
+
+        settings.setStaticLevelModified(restoreState(data[47],7));
+        settings.setStaticLevelModifier((data[47] & 0x7F) - 50);
 
         int romNameLength = data[LENGTH_OF_SETTINGS_DATA] & 0xFF;
         String romName = new String(data, LENGTH_OF_SETTINGS_DATA + 1, romNameLength, "US-ASCII");
@@ -644,6 +874,13 @@ public class Settings {
             this.currentRestrictions.limitToGen(rh.generationOfPokemon());
         }
 
+        // gen 5 exclusive stuff
+        if (rh.generationOfPokemon() != 5) {
+            if (trainersMod == TrainersMod.MAINPLAYTHROUGH) {
+                trainersMod = TrainersMod.RANDOM;
+            }
+        }
+
         // misc tweaks
         int oldMiscTweaks = this.currentMiscTweaks;
         this.currentMiscTweaks &= rh.miscTweaksAvailable();
@@ -664,7 +901,7 @@ public class Settings {
         }
 
         if (!rh.supportsFourStartingMoves()) {
-            this.setStartWithFourMoves(false);
+            this.setStartWithGuaranteedMoves(false);
         }
 
         if (rh instanceof Gen1RomHandler || rh instanceof Gen2RomHandler) {
@@ -702,6 +939,10 @@ public class Settings {
             this.setRandomizeMoveCategory(false);
         }
 
+        if (!rh.hasShopRandomization()) {
+            this.setShopItemsMod(ShopItemsMod.UNCHANGED);
+        }
+
         // done
         return feedback;
     }
@@ -721,793 +962,1139 @@ public class Settings {
         return romName;
     }
 
-    public Settings setRomName(String romName) {
+    public void setRomName(String romName) {
         this.romName = romName;
-        return this;
     }
 
     public boolean isUpdatedFromOldVersion() {
         return updatedFromOldVersion;
     }
 
-    public Settings setUpdatedFromOldVersion(boolean updatedFromOldVersion) {
+    private void setUpdatedFromOldVersion(boolean updatedFromOldVersion) {
         this.updatedFromOldVersion = updatedFromOldVersion;
-        return this;
     }
 
     public GenRestrictions getCurrentRestrictions() {
         return currentRestrictions;
     }
 
-    public Settings setCurrentRestrictions(GenRestrictions currentRestrictions) {
+    public void setCurrentRestrictions(GenRestrictions currentRestrictions) {
         this.currentRestrictions = currentRestrictions;
-        return this;
     }
 
     public int getCurrentMiscTweaks() {
         return currentMiscTweaks;
     }
 
-    public Settings setCurrentMiscTweaks(int currentMiscTweaks) {
+    public void setCurrentMiscTweaks(int currentMiscTweaks) {
         this.currentMiscTweaks = currentMiscTweaks;
-        return this;
     }
 
     public boolean isUpdateMoves() {
         return updateMoves;
     }
 
-    public Settings setUpdateMoves(boolean updateMoves) {
+    public void setUpdateMoves(boolean updateMoves) {
         this.updateMoves = updateMoves;
-        return this;
     }
 
     public boolean isUpdateMovesLegacy() {
         return updateMovesLegacy;
     }
 
-    public Settings setUpdateMovesLegacy(boolean updateMovesLegacy) {
+    public void setUpdateMovesLegacy(boolean updateMovesLegacy) {
         this.updateMovesLegacy = updateMovesLegacy;
-        return this;
+    }
+
+    public int getUpdateMovesToGeneration() {
+        return updateMovesToGeneration;
+    }
+
+    public void setUpdateMovesToGeneration(int generation) {
+        updateMovesToGeneration = generation;
     }
 
     public boolean isChangeImpossibleEvolutions() {
         return changeImpossibleEvolutions;
     }
 
-    public Settings setChangeImpossibleEvolutions(boolean changeImpossibleEvolutions) {
+    public void setChangeImpossibleEvolutions(boolean changeImpossibleEvolutions) {
         this.changeImpossibleEvolutions = changeImpossibleEvolutions;
-        return this;
     }
 
     public boolean isMakeEvolutionsEasier() {
         return makeEvolutionsEasier;
     }
 
-    public Settings setMakeEvolutionsEasier(boolean makeEvolutionsEasier) {
+    public void setMakeEvolutionsEasier(boolean makeEvolutionsEasier) {
         this.makeEvolutionsEasier = makeEvolutionsEasier;
-        return this;
+    }
+
+    public boolean isRemoveTimeBasedEvolutions() {
+        return removeTimeBasedEvolutions;
+    }
+
+    public void setRemoveTimeBasedEvolutions(boolean removeTimeBasedEvolutions) {
+        this.removeTimeBasedEvolutions = removeTimeBasedEvolutions;
+    }
+
+    public boolean isEvosAllowAltFormes() {
+        return evosAllowAltFormes;
+    }
+
+    public void setEvosAllowAltFormes(boolean evosAllowAltFormes) {
+        this.evosAllowAltFormes = evosAllowAltFormes;
     }
 
     public boolean isRaceMode() {
         return raceMode;
     }
 
-    public Settings setRaceMode(boolean raceMode) {
+    public void setRaceMode(boolean raceMode) {
         this.raceMode = raceMode;
-        return this;
     }
 
     public boolean doBlockBrokenMoves() {
         return blockBrokenMoves;
     }
 
-    public Settings setBlockBrokenMoves(boolean blockBrokenMoves) {
-        this.blockBrokenMoves = blockBrokenMoves;
-        return this;
+    public void setBlockBrokenMoves(boolean blockBrokenMoves) {
+        blockBrokenMovesetMoves = blockBrokenMoves;
+        blockBrokenTMMoves = blockBrokenMoves;
+        blockBrokenTutorMoves = blockBrokenMoves;
     }
 
     public boolean isLimitPokemon() {
         return limitPokemon;
     }
 
-    public Settings setLimitPokemon(boolean limitPokemon) {
+    public void setLimitPokemon(boolean limitPokemon) {
         this.limitPokemon = limitPokemon;
-        return this;
     }
 
     public BaseStatisticsMod getBaseStatisticsMod() {
         return baseStatisticsMod;
     }
 
-    public Settings setBaseStatisticsMod(BaseStatisticsMod baseStatisticsMod) {
-        this.baseStatisticsMod = baseStatisticsMod;
-        return this;
+    public void setBaseStatisticsMod(boolean... bools) {
+        setBaseStatisticsMod(getEnum(BaseStatisticsMod.class, bools));
     }
 
-    public Settings setBaseStatisticsMod(boolean... bools) {
-        return setBaseStatisticsMod(getEnum(BaseStatisticsMod.class, bools));
+    private void setBaseStatisticsMod(BaseStatisticsMod baseStatisticsMod) {
+        this.baseStatisticsMod = baseStatisticsMod;
     }
 
     public boolean isBaseStatsFollowEvolutions() {
         return baseStatsFollowEvolutions;
     }
 
-    public Settings setBaseStatsFollowEvolutions(boolean baseStatsFollowEvolutions) {
+    public void setBaseStatsFollowEvolutions(boolean baseStatsFollowEvolutions) {
         this.baseStatsFollowEvolutions = baseStatsFollowEvolutions;
-        return this;
+    }
+
+    public boolean isBaseStatsFollowMegaEvolutions() {
+        return baseStatsFollowMegaEvolutions;
+    }
+
+    public void setBaseStatsFollowMegaEvolutions(boolean baseStatsFollowMegaEvolutions) {
+        this.baseStatsFollowMegaEvolutions = baseStatsFollowMegaEvolutions;
     }
 
     public boolean isStandardizeEXPCurves() {
         return standardizeEXPCurves;
     }
 
-    public Settings setStandardizeEXPCurves(boolean standardizeEXPCurves) {
+    public void setStandardizeEXPCurves(boolean standardizeEXPCurves) {
         this.standardizeEXPCurves = standardizeEXPCurves;
-        return this;
+    }
+
+    public ExpCurveMod getExpCurveMod() {
+        return expCurveMod;
+    }
+
+    public void setExpCurveMod(boolean... bools) {
+        setExpCurveMod(getEnum(ExpCurveMod.class, bools));
+    }
+
+    private void setExpCurveMod(ExpCurveMod expCurveMod) {
+        this.expCurveMod = expCurveMod;
+    }
+
+    public ExpCurve getSelectedEXPCurve() {
+        return selectedEXPCurve;
+    }
+
+    public void setSelectedEXPCurve(ExpCurve expCurve) {
+        this.selectedEXPCurve = expCurve;
     }
 
     public boolean isUpdateBaseStats() {
         return updateBaseStats;
     }
 
-    public Settings setUpdateBaseStats(boolean updateBaseStats) {
+    public void setUpdateBaseStats(boolean updateBaseStats) {
         this.updateBaseStats = updateBaseStats;
-        return this;
+    }
+
+    public int getUpdateBaseStatsToGeneration() {
+        return updateBaseStatsToGeneration;
+    }
+
+    public void setUpdateBaseStatsToGeneration(int generation) {
+        this.updateBaseStatsToGeneration = generation;
     }
 
     public AbilitiesMod getAbilitiesMod() {
         return abilitiesMod;
     }
 
-    public Settings setAbilitiesMod(AbilitiesMod abilitiesMod) {
-        this.abilitiesMod = abilitiesMod;
-        return this;
+    public void setAbilitiesMod(boolean... bools) {
+        setAbilitiesMod(getEnum(AbilitiesMod.class, bools));
     }
 
-    public Settings setAbilitiesMod(boolean... bools) {
-        return setAbilitiesMod(getEnum(AbilitiesMod.class, bools));
+    private void setAbilitiesMod(AbilitiesMod abilitiesMod) {
+        this.abilitiesMod = abilitiesMod;
     }
 
     public boolean isAllowWonderGuard() {
         return allowWonderGuard;
     }
 
-    public Settings setAllowWonderGuard(boolean allowWonderGuard) {
+    public void setAllowWonderGuard(boolean allowWonderGuard) {
         this.allowWonderGuard = allowWonderGuard;
-        return this;
     }
 
     public boolean isAbilitiesFollowEvolutions() {
         return abilitiesFollowEvolutions;
     }
 
-    public Settings setAbilitiesFollowEvolutions(boolean abilitiesFollowEvolutions) {
+    public void setAbilitiesFollowEvolutions(boolean abilitiesFollowEvolutions) {
         this.abilitiesFollowEvolutions = abilitiesFollowEvolutions;
-        return this;
+    }
+
+    public boolean isAbilitiesFollowMegaEvolutions() {
+        return abilitiesFollowMegaEvolutions;
+    }
+
+    public void setAbilitiesFollowMegaEvolutions(boolean abilitiesFollowMegaEvolutions) {
+        this.abilitiesFollowMegaEvolutions = abilitiesFollowMegaEvolutions;
     }
 
     public boolean isBanTrappingAbilities() {
         return banTrappingAbilities;
     }
 
-    public Settings setBanTrappingAbilities(boolean banTrappingAbilities) {
+    public void setBanTrappingAbilities(boolean banTrappingAbilities) {
         this.banTrappingAbilities = banTrappingAbilities;
-        return this;
     }
 
     public boolean isBanNegativeAbilities() {
         return banNegativeAbilities;
     }
 
-    public Settings setBanNegativeAbilities(boolean banNegativeAbilities) {
+    public void setBanNegativeAbilities(boolean banNegativeAbilities) {
         this.banNegativeAbilities = banNegativeAbilities;
-        return this;
+    }
+
+    public boolean isBanBadAbilities() {
+        return banBadAbilities;
+    }
+
+    public void setBanBadAbilities(boolean banBadAbilities) {
+        this.banBadAbilities = banBadAbilities;
+    }
+
+    public boolean isWeighDuplicateAbilitiesTogether() {
+        return weighDuplicateAbilitiesTogether;
+    }
+
+    public void setWeighDuplicateAbilitiesTogether(boolean weighDuplicateAbilitiesTogether) {
+        this.weighDuplicateAbilitiesTogether = weighDuplicateAbilitiesTogether;
     }
 
     public StartersMod getStartersMod() {
         return startersMod;
     }
 
-    public Settings setStartersMod(StartersMod startersMod) {
-        this.startersMod = startersMod;
-        return this;
+    public void setStartersMod(boolean... bools) {
+        setStartersMod(getEnum(StartersMod.class, bools));
     }
 
-    public Settings setStartersMod(boolean... bools) {
-        return setStartersMod(getEnum(StartersMod.class, bools));
+    private void setStartersMod(StartersMod startersMod) {
+        this.startersMod = startersMod;
     }
 
     public int[] getCustomStarters() {
         return customStarters;
     }
 
-    public Settings setCustomStarters(int[] customStarters) {
+    public void setCustomStarters(int[] customStarters) {
         this.customStarters = customStarters;
-        return this;
     }
 
     public boolean isRandomizeStartersHeldItems() {
         return randomizeStartersHeldItems;
     }
 
-    public Settings setRandomizeStartersHeldItems(boolean randomizeStartersHeldItems) {
+    public void setRandomizeStartersHeldItems(boolean randomizeStartersHeldItems) {
         this.randomizeStartersHeldItems = randomizeStartersHeldItems;
-        return this;
     }
 
     public boolean isBanBadRandomStarterHeldItems() {
         return banBadRandomStarterHeldItems;
     }
 
-    public Settings setBanBadRandomStarterHeldItems(boolean banBadRandomStarterHeldItems) {
+    public void setBanBadRandomStarterHeldItems(boolean banBadRandomStarterHeldItems) {
         this.banBadRandomStarterHeldItems = banBadRandomStarterHeldItems;
-        return this;
     }
 
+    public boolean isAllowStarterAltFormes() {
+        return allowStarterAltFormes;
+    }
+
+    public void setAllowStarterAltFormes(boolean allowStarterAltFormes) {
+        this.allowStarterAltFormes = allowStarterAltFormes;
+    }
+
+    
     public TypesMod getTypesMod() {
         return typesMod;
     }
 
-    public Settings setTypesMod(TypesMod typesMod) {
-        this.typesMod = typesMod;
-        return this;
+    public void setTypesMod(boolean... bools) {
+        setTypesMod(getEnum(TypesMod.class, bools));
     }
 
-    public Settings setTypesMod(boolean... bools) {
-        return setTypesMod(getEnum(TypesMod.class, bools));
+    private void setTypesMod(TypesMod typesMod) {
+        this.typesMod = typesMod;
+    }
+
+    public boolean isTypesFollowMegaEvolutions() {
+        return typesFollowMegaEvolutions;
+    }
+
+    public void setTypesFollowMegaEvolutions(boolean typesFollowMegaEvolutions) {
+        this.typesFollowMegaEvolutions = typesFollowMegaEvolutions;
     }
 
     public EvolutionsMod getEvolutionsMod() {
         return evolutionsMod;
     }
 
-    public Settings setEvolutionsMod(EvolutionsMod evolutionsMod) {
-        this.evolutionsMod = evolutionsMod;
-        return this;
+    public void setEvolutionsMod(boolean... bools) {
+        setEvolutionsMod(getEnum(EvolutionsMod.class, bools));
     }
 
-    public Settings setEvolutionsMod(boolean... bools) {
-        return setEvolutionsMod(getEnum(EvolutionsMod.class, bools));
+    private void setEvolutionsMod(EvolutionsMod evolutionsMod) {
+        this.evolutionsMod = evolutionsMod;
     }
 
     public boolean isEvosSimilarStrength() {
         return evosSimilarStrength;
     }
 
-    public Settings setEvosSimilarStrength(boolean evosSimilarStrength) {
+    public void setEvosSimilarStrength(boolean evosSimilarStrength) {
         this.evosSimilarStrength = evosSimilarStrength;
-        return this;
     }
 
     public boolean isEvosSameTyping() {
         return evosSameTyping;
     }
 
-    public Settings setEvosSameTyping(boolean evosSameTyping) {
+    public void setEvosSameTyping(boolean evosSameTyping) {
         this.evosSameTyping = evosSameTyping;
-        return this;
     }
 
     public boolean isEvosMaxThreeStages() {
         return evosMaxThreeStages;
     }
 
-    public Settings setEvosMaxThreeStages(boolean evosMaxThreeStages) {
+    public void setEvosMaxThreeStages(boolean evosMaxThreeStages) {
         this.evosMaxThreeStages = evosMaxThreeStages;
-        return this;
     }
 
     public boolean isEvosForceChange() {
         return evosForceChange;
     }
 
-    public Settings setEvosForceChange(boolean evosForceChange) {
+    public void setEvosForceChange(boolean evosForceChange) {
         this.evosForceChange = evosForceChange;
-        return this;
     }
 
     public boolean isRandomizeMovePowers() {
         return randomizeMovePowers;
     }
 
-    public Settings setRandomizeMovePowers(boolean randomizeMovePowers) {
+    public void setRandomizeMovePowers(boolean randomizeMovePowers) {
         this.randomizeMovePowers = randomizeMovePowers;
-        return this;
     }
 
     public boolean isRandomizeMoveAccuracies() {
         return randomizeMoveAccuracies;
     }
 
-    public Settings setRandomizeMoveAccuracies(boolean randomizeMoveAccuracies) {
+    public void setRandomizeMoveAccuracies(boolean randomizeMoveAccuracies) {
         this.randomizeMoveAccuracies = randomizeMoveAccuracies;
-        return this;
     }
 
     public boolean isRandomizeMovePPs() {
         return randomizeMovePPs;
     }
 
-    public Settings setRandomizeMovePPs(boolean randomizeMovePPs) {
+    public void setRandomizeMovePPs(boolean randomizeMovePPs) {
         this.randomizeMovePPs = randomizeMovePPs;
-        return this;
     }
 
     public boolean isRandomizeMoveTypes() {
         return randomizeMoveTypes;
     }
 
-    public Settings setRandomizeMoveTypes(boolean randomizeMoveTypes) {
+    public void setRandomizeMoveTypes(boolean randomizeMoveTypes) {
         this.randomizeMoveTypes = randomizeMoveTypes;
-        return this;
     }
 
     public boolean isRandomizeMoveCategory() {
         return randomizeMoveCategory;
     }
 
-    public Settings setRandomizeMoveCategory(boolean randomizeMoveCategory) {
+    public void setRandomizeMoveCategory(boolean randomizeMoveCategory) {
         this.randomizeMoveCategory = randomizeMoveCategory;
-        return this;
     }
 
     public MovesetsMod getMovesetsMod() {
         return movesetsMod;
     }
 
-    public Settings setMovesetsMod(MovesetsMod movesetsMod) {
+    public void setMovesetsMod(boolean... bools) {
+        setMovesetsMod(getEnum(MovesetsMod.class, bools));
+    }
+
+    private void setMovesetsMod(MovesetsMod movesetsMod) {
         this.movesetsMod = movesetsMod;
-        return this;
     }
 
-    public Settings setMovesetsMod(boolean... bools) {
-        return setMovesetsMod(getEnum(MovesetsMod.class, bools));
+    public boolean isStartWithGuaranteedMoves() {
+        return startWithGuaranteedMoves;
     }
 
-    public boolean isStartWithFourMoves() {
-        return startWithFourMoves;
+    public void setStartWithGuaranteedMoves(boolean startWithGuaranteedMoves) {
+        this.startWithGuaranteedMoves = startWithGuaranteedMoves;
     }
 
-    public Settings setStartWithFourMoves(boolean startWithFourMoves) {
-        this.startWithFourMoves = startWithFourMoves;
-        return this;
+    public int getGuaranteedMoveCount() {
+        return guaranteedMoveCount;
+    }
+
+    public void setGuaranteedMoveCount(int guaranteedMoveCount) {
+        this.guaranteedMoveCount = guaranteedMoveCount;
     }
 
     public boolean isReorderDamagingMoves() {
         return reorderDamagingMoves;
     }
 
-    public Settings setReorderDamagingMoves(boolean reorderDamagingMoves) {
+    public void setReorderDamagingMoves(boolean reorderDamagingMoves) {
         this.reorderDamagingMoves = reorderDamagingMoves;
-        return this;
     }
 
     public boolean isMovesetsForceGoodDamaging() {
         return movesetsForceGoodDamaging;
     }
 
-    public Settings setMovesetsForceGoodDamaging(boolean movesetsForceGoodDamaging) {
+    public void setMovesetsForceGoodDamaging(boolean movesetsForceGoodDamaging) {
         this.movesetsForceGoodDamaging = movesetsForceGoodDamaging;
-        return this;
     }
 
     public int getMovesetsGoodDamagingPercent() {
         return movesetsGoodDamagingPercent;
     }
 
-    public Settings setMovesetsGoodDamagingPercent(int movesetsGoodDamagingPercent) {
+    public void setMovesetsGoodDamagingPercent(int movesetsGoodDamagingPercent) {
         this.movesetsGoodDamagingPercent = movesetsGoodDamagingPercent;
-        return this;
+    }
+
+    public boolean isBlockBrokenMovesetMoves() {
+        return blockBrokenMovesetMoves;
+    }
+
+    public void setBlockBrokenMovesetMoves(boolean blockBrokenMovesetMoves) {
+        this.blockBrokenMovesetMoves = blockBrokenMovesetMoves;
+    }
+
+    public boolean isEvolutionMovesForAll() {
+        return evolutionMovesForAll;
+    }
+
+    public void setEvolutionMovesForAll(boolean evolutionMovesForAll) {
+        this.evolutionMovesForAll = evolutionMovesForAll;
     }
 
     public TrainersMod getTrainersMod() {
         return trainersMod;
     }
 
-    public Settings setTrainersMod(TrainersMod trainersMod) {
-        this.trainersMod = trainersMod;
-        return this;
+    public void setTrainersMod(boolean... bools) {
+        setTrainersMod(getEnum(TrainersMod.class, bools));
     }
 
-    public Settings setTrainersMod(boolean... bools) {
-        return setTrainersMod(getEnum(TrainersMod.class, bools));
+    private void setTrainersMod(TrainersMod trainersMod) {
+        this.trainersMod = trainersMod;
     }
 
     public boolean isRivalCarriesStarterThroughout() {
         return rivalCarriesStarterThroughout;
     }
 
-    public Settings setRivalCarriesStarterThroughout(boolean rivalCarriesStarterThroughout) {
+    public void setRivalCarriesStarterThroughout(boolean rivalCarriesStarterThroughout) {
         this.rivalCarriesStarterThroughout = rivalCarriesStarterThroughout;
-        return this;
     }
 
     public boolean isTrainersUsePokemonOfSimilarStrength() {
         return trainersUsePokemonOfSimilarStrength;
     }
 
-    public Settings setTrainersUsePokemonOfSimilarStrength(boolean trainersUsePokemonOfSimilarStrength) {
+    public void setTrainersUsePokemonOfSimilarStrength(boolean trainersUsePokemonOfSimilarStrength) {
         this.trainersUsePokemonOfSimilarStrength = trainersUsePokemonOfSimilarStrength;
-        return this;
     }
 
     public boolean isTrainersMatchTypingDistribution() {
         return trainersMatchTypingDistribution;
     }
 
-    public Settings setTrainersMatchTypingDistribution(boolean trainersMatchTypingDistribution) {
+    public void setTrainersMatchTypingDistribution(boolean trainersMatchTypingDistribution) {
         this.trainersMatchTypingDistribution = trainersMatchTypingDistribution;
-        return this;
     }
 
     public boolean isTrainersBlockLegendaries() {
         return trainersBlockLegendaries;
     }
 
-    public Settings setTrainersBlockLegendaries(boolean trainersBlockLegendaries) {
+    public void setTrainersBlockLegendaries(boolean trainersBlockLegendaries) {
         this.trainersBlockLegendaries = trainersBlockLegendaries;
+    }
+
+    public boolean isTrainersEnforceDistribution() {
+        return trainersEnforceDistribution;
+    }
+
+    public Settings setTrainersEnforceDistribution(boolean trainersEnforceDistribution) {
+        this.trainersEnforceDistribution = trainersEnforceDistribution;
+        return this;
+    }
+    
+    public boolean isTrainersEnforceMainPlaythrough() {
+        return trainersEnforceMainPlaythrough;
+    }
+
+    public Settings setTrainersEnforceMainPlaythrough(boolean trainersEnforceMainPlaythrough) {
+        this.trainersEnforceMainPlaythrough = trainersEnforceMainPlaythrough;
         return this;
     }
 
+    
     public boolean isTrainersBlockEarlyWonderGuard() {
         return trainersBlockEarlyWonderGuard;
     }
 
-    public Settings setTrainersBlockEarlyWonderGuard(boolean trainersBlockEarlyWonderGuard) {
+    public void setTrainersBlockEarlyWonderGuard(boolean trainersBlockEarlyWonderGuard) {
         this.trainersBlockEarlyWonderGuard = trainersBlockEarlyWonderGuard;
-        return this;
     }
 
     public boolean isRandomizeTrainerNames() {
         return randomizeTrainerNames;
     }
 
-    public Settings setRandomizeTrainerNames(boolean randomizeTrainerNames) {
+    public void setRandomizeTrainerNames(boolean randomizeTrainerNames) {
         this.randomizeTrainerNames = randomizeTrainerNames;
-        return this;
     }
 
     public boolean isRandomizeTrainerClassNames() {
         return randomizeTrainerClassNames;
     }
 
-    public Settings setRandomizeTrainerClassNames(boolean randomizeTrainerClassNames) {
+    public void setRandomizeTrainerClassNames(boolean randomizeTrainerClassNames) {
         this.randomizeTrainerClassNames = randomizeTrainerClassNames;
-        return this;
     }
 
     public boolean isTrainersForceFullyEvolved() {
         return trainersForceFullyEvolved;
     }
 
-    public Settings setTrainersForceFullyEvolved(boolean trainersForceFullyEvolved) {
+    public void setTrainersForceFullyEvolved(boolean trainersForceFullyEvolved) {
         this.trainersForceFullyEvolved = trainersForceFullyEvolved;
-        return this;
     }
 
     public int getTrainersForceFullyEvolvedLevel() {
         return trainersForceFullyEvolvedLevel;
     }
 
-    public Settings setTrainersForceFullyEvolvedLevel(int trainersForceFullyEvolvedLevel) {
+    public void setTrainersForceFullyEvolvedLevel(int trainersForceFullyEvolvedLevel) {
         this.trainersForceFullyEvolvedLevel = trainersForceFullyEvolvedLevel;
-        return this;
     }
 
     public boolean isTrainersLevelModified() {
         return trainersLevelModified;
     }
 
-    public Settings setTrainersLevelModified(boolean trainersLevelModified) {
+    public void setTrainersLevelModified(boolean trainersLevelModified) {
         this.trainersLevelModified = trainersLevelModified;
-        return this;
     }
 
     public int getTrainersLevelModifier() {
         return trainersLevelModifier;
     }
 
-    public Settings setTrainersLevelModifier(int trainersLevelModifier) {
+    public void setTrainersLevelModifier(int trainersLevelModifier) {
         this.trainersLevelModifier = trainersLevelModifier;
-        return this;
+    }
+
+    public boolean isAllowTrainerAlternateFormes() {
+        return allowTrainerAlternateFormes;
+    }
+
+    public void setAllowTrainerAlternateFormes(boolean allowTrainerAlternateFormes) {
+        this.allowTrainerAlternateFormes = allowTrainerAlternateFormes;
+    }
+
+    public boolean isSwapTrainerMegaEvos() {
+        return swapTrainerMegaEvos;
+    }
+
+    public void setSwapTrainerMegaEvos(boolean swapTrainerMegaEvos) {
+        this.swapTrainerMegaEvos = swapTrainerMegaEvos;
+    }
+
+    public int getAdditionalBossTrainerPokemon() {
+        return additionalBossTrainerPokemon;
+    }
+
+    public void setAdditionalBossTrainerPokemon(int additional) {
+        this.additionalBossTrainerPokemon = additional;
+    }
+
+    public int getAdditionalImportantTrainerPokemon() {
+        return additionalImportantTrainerPokemon;
+    }
+
+    public void setAdditionalImportantTrainerPokemon(int additional) {
+        this.additionalImportantTrainerPokemon = additional;
+    }
+
+    public int getAdditionalRegularTrainerPokemon() {
+        return additionalRegularTrainerPokemon;
+    }
+
+    public void setAdditionalRegularTrainerPokemon(int additional) {
+        this.additionalRegularTrainerPokemon = additional;
+    }
+
+    public boolean isDoubleBattleMode() {
+        return doubleBattleMode;
+    }
+
+    public void setDoubleBattleMode(boolean doubleBattleMode) {
+        this.doubleBattleMode = doubleBattleMode;
+    }
+
+    public boolean isShinyChance() {
+        return shinyChance;
+    }
+
+    public void setShinyChance(boolean shinyChance) {
+        this.shinyChance = shinyChance;
     }
 
     public WildPokemonMod getWildPokemonMod() {
         return wildPokemonMod;
     }
 
-    public Settings setWildPokemonMod(WildPokemonMod wildPokemonMod) {
-        this.wildPokemonMod = wildPokemonMod;
-        return this;
+    public void setWildPokemonMod(boolean... bools) {
+        setWildPokemonMod(getEnum(WildPokemonMod.class, bools));
     }
 
-    public Settings setWildPokemonMod(boolean... bools) {
-        return setWildPokemonMod(getEnum(WildPokemonMod.class, bools));
+    private void setWildPokemonMod(WildPokemonMod wildPokemonMod) {
+        this.wildPokemonMod = wildPokemonMod;
     }
 
     public WildPokemonRestrictionMod getWildPokemonRestrictionMod() {
         return wildPokemonRestrictionMod;
     }
 
-    public Settings setWildPokemonRestrictionMod(WildPokemonRestrictionMod wildPokemonRestrictionMod) {
-        this.wildPokemonRestrictionMod = wildPokemonRestrictionMod;
-        return this;
+    public void setWildPokemonRestrictionMod(boolean... bools) {
+        setWildPokemonRestrictionMod(getEnum(WildPokemonRestrictionMod.class, bools));
     }
 
-    public Settings setWildPokemonRestrictionMod(boolean... bools) {
-        return setWildPokemonRestrictionMod(getEnum(WildPokemonRestrictionMod.class, bools));
+    private void setWildPokemonRestrictionMod(WildPokemonRestrictionMod wildPokemonRestrictionMod) {
+        this.wildPokemonRestrictionMod = wildPokemonRestrictionMod;
     }
 
     public boolean isUseTimeBasedEncounters() {
         return useTimeBasedEncounters;
     }
 
-    public Settings setUseTimeBasedEncounters(boolean useTimeBasedEncounters) {
+    public void setUseTimeBasedEncounters(boolean useTimeBasedEncounters) {
         this.useTimeBasedEncounters = useTimeBasedEncounters;
-        return this;
     }
 
     public boolean isBlockWildLegendaries() {
         return blockWildLegendaries;
     }
 
-    public Settings setBlockWildLegendaries(boolean blockWildLegendaries) {
+    public void setBlockWildLegendaries(boolean blockWildLegendaries) {
         this.blockWildLegendaries = blockWildLegendaries;
-        return this;
     }
 
     public boolean isUseMinimumCatchRate() {
         return useMinimumCatchRate;
     }
 
-    public Settings setUseMinimumCatchRate(boolean useMinimumCatchRate) {
+    public void setUseMinimumCatchRate(boolean useMinimumCatchRate) {
         this.useMinimumCatchRate = useMinimumCatchRate;
-        return this;
     }
 
     public int getMinimumCatchRateLevel() {
         return minimumCatchRateLevel;
     }
 
-    public Settings setMinimumCatchRateLevel(int minimumCatchRateLevel) {
+    public void setMinimumCatchRateLevel(int minimumCatchRateLevel) {
         this.minimumCatchRateLevel = minimumCatchRateLevel;
-        return this;
     }
 
     public boolean isRandomizeWildPokemonHeldItems() {
         return randomizeWildPokemonHeldItems;
     }
 
-    public Settings setRandomizeWildPokemonHeldItems(boolean randomizeWildPokemonHeldItems) {
+    public void setRandomizeWildPokemonHeldItems(boolean randomizeWildPokemonHeldItems) {
         this.randomizeWildPokemonHeldItems = randomizeWildPokemonHeldItems;
-        return this;
     }
 
     public boolean isBanBadRandomWildPokemonHeldItems() {
         return banBadRandomWildPokemonHeldItems;
     }
 
-    public Settings setBanBadRandomWildPokemonHeldItems(boolean banBadRandomWildPokemonHeldItems) {
+    public void setBanBadRandomWildPokemonHeldItems(boolean banBadRandomWildPokemonHeldItems) {
         this.banBadRandomWildPokemonHeldItems = banBadRandomWildPokemonHeldItems;
-        return this;
+    }
+
+    public boolean isBalanceShakingGrass() {
+        return balanceShakingGrass;
+    }
+
+    public void setBalanceShakingGrass(boolean balanceShakingGrass) {
+        this.balanceShakingGrass = balanceShakingGrass;
+    }
+
+    public boolean isWildLevelsModified() {
+        return wildLevelsModified;
+    }
+
+    public void setWildLevelsModified(boolean wildLevelsModified) {
+        this.wildLevelsModified = wildLevelsModified;
+    }
+
+    public int getWildLevelModifier() {
+        return wildLevelModifier;
+    }
+
+    public void setWildLevelModifier(int wildLevelModifier) {
+        this.wildLevelModifier = wildLevelModifier;
+    }
+
+    public boolean isAllowWildAltFormes() {
+        return allowWildAltFormes;
+    }
+
+    public void setAllowWildAltFormes(boolean allowWildAltFormes) {
+        this.allowWildAltFormes = allowWildAltFormes;
     }
 
     public StaticPokemonMod getStaticPokemonMod() {
         return staticPokemonMod;
     }
 
-    public Settings setStaticPokemonMod(StaticPokemonMod staticPokemonMod) {
-        this.staticPokemonMod = staticPokemonMod;
-        return this;
+    public void setStaticPokemonMod(boolean... bools) {
+        setStaticPokemonMod(getEnum(StaticPokemonMod.class, bools));
     }
 
-    public Settings setStaticPokemonMod(boolean... bools) {
-        return setStaticPokemonMod(getEnum(StaticPokemonMod.class, bools));
+    private void setStaticPokemonMod(StaticPokemonMod staticPokemonMod) {
+        this.staticPokemonMod = staticPokemonMod;
+    }
+
+    public boolean isLimitMusketeers() {
+        return limitMusketeers;
+    }
+
+    public void setLimitMusketeers(boolean limitMusketeers) {
+        this.limitMusketeers = limitMusketeers;
+    }
+
+    public boolean isLimit600() {
+        return limit600;
+    }
+
+    public void setLimit600(boolean limit600) {
+        this.limit600 = limit600;
+    }
+
+    public boolean isAllowStaticAltFormes() {
+        return allowStaticAltFormes;
+    }
+
+    public void setAllowStaticAltFormes(boolean allowStaticAltFormes) {
+        this.allowStaticAltFormes = allowStaticAltFormes;
+    }
+
+    public boolean isSwapStaticMegaEvos() {
+        return swapStaticMegaEvos;
+    }
+
+    public void setSwapStaticMegaEvos(boolean swapStaticMegaEvos) {
+        this.swapStaticMegaEvos = swapStaticMegaEvos;
+    }
+
+    public boolean isStaticLevelModified() {
+        return staticLevelModified;
+    }
+
+    public void setStaticLevelModified(boolean staticLevelModified) {
+        this.staticLevelModified = staticLevelModified;
+    }
+
+    public int getStaticLevelModifier() {
+        return staticLevelModifier;
+    }
+
+    public void setStaticLevelModifier(int staticLevelModifier) {
+        this.staticLevelModifier = staticLevelModifier;
+    }
+
+    public TotemPokemonMod getTotemPokemonMod() {
+        return totemPokemonMod;
+    }
+
+    public void setTotemPokemonMod(boolean... bools) {
+        setTotemPokemonMod(getEnum(TotemPokemonMod.class, bools));
+    }
+
+    private void setTotemPokemonMod(TotemPokemonMod totemPokemonMod) {
+        this.totemPokemonMod = totemPokemonMod;
+    }
+
+    public AllyPokemonMod getAllyPokemonMod() {
+        return allyPokemonMod;
+    }
+
+    public void setAllyPokemonMod(boolean... bools) {
+        setAllyPokemonMod(getEnum(AllyPokemonMod.class, bools));
+    }
+
+    private void setAllyPokemonMod(AllyPokemonMod allyPokemonMod) {
+        this.allyPokemonMod = allyPokemonMod;
+    }
+
+    public AuraMod getAuraMod() {
+        return auraMod;
+    }
+
+    public void setAuraMod(boolean... bools) {
+        setAuraMod(getEnum(AuraMod.class, bools));
+    }
+
+    private void setAuraMod(AuraMod auraMod) {
+        this.auraMod = auraMod;
+    }
+
+    public boolean isRandomizeTotemHeldItems() {
+        return randomizeTotemHeldItems;
+    }
+
+    public void setRandomizeTotemHeldItems(boolean randomizeTotemHeldItems) {
+        this.randomizeTotemHeldItems = randomizeTotemHeldItems;
+    }
+
+    public boolean isTotemLevelsModified() {
+        return totemLevelsModified;
+    }
+
+    public void setTotemLevelsModified(boolean totemLevelsModified) {
+        this.totemLevelsModified = totemLevelsModified;
+    }
+
+    public int getTotemLevelModifier() {
+        return totemLevelModifier;
+    }
+
+    public void setTotemLevelModifier(int totemLevelModifier) {
+        this.totemLevelModifier = totemLevelModifier;
+    }
+
+    public boolean isAllowTotemAltFormes() {
+        return allowTotemAltFormes;
+    }
+
+    public void setAllowTotemAltFormes(boolean allowTotemAltFormes) {
+        this.allowTotemAltFormes = allowTotemAltFormes;
     }
 
     public TMsMod getTmsMod() {
         return tmsMod;
     }
 
-    public Settings setTmsMod(TMsMod tmsMod) {
-        this.tmsMod = tmsMod;
-        return this;
+    public void setTmsMod(boolean... bools) {
+        setTmsMod(getEnum(TMsMod.class, bools));
     }
 
-    public Settings setTmsMod(boolean... bools) {
-        return setTmsMod(getEnum(TMsMod.class, bools));
+    private void setTmsMod(TMsMod tmsMod) {
+        this.tmsMod = tmsMod;
     }
 
     public boolean isTmLevelUpMoveSanity() {
         return tmLevelUpMoveSanity;
     }
 
-    public Settings setTmLevelUpMoveSanity(boolean tmLevelUpMoveSanity) {
+    public void setTmLevelUpMoveSanity(boolean tmLevelUpMoveSanity) {
         this.tmLevelUpMoveSanity = tmLevelUpMoveSanity;
-        return this;
     }
 
     public boolean isKeepFieldMoveTMs() {
         return keepFieldMoveTMs;
     }
 
-    public Settings setKeepFieldMoveTMs(boolean keepFieldMoveTMs) {
+    public void setKeepFieldMoveTMs(boolean keepFieldMoveTMs) {
         this.keepFieldMoveTMs = keepFieldMoveTMs;
-        return this;
     }
 
     public boolean isFullHMCompat() {
         return fullHMCompat;
     }
 
-    public Settings setFullHMCompat(boolean fullHMCompat) {
+    public void setFullHMCompat(boolean fullHMCompat) {
         this.fullHMCompat = fullHMCompat;
-        return this;
     }
 
     public boolean isTmsForceGoodDamaging() {
         return tmsForceGoodDamaging;
     }
 
-    public Settings setTmsForceGoodDamaging(boolean tmsForceGoodDamaging) {
+    public void setTmsForceGoodDamaging(boolean tmsForceGoodDamaging) {
         this.tmsForceGoodDamaging = tmsForceGoodDamaging;
-        return this;
     }
 
     public int getTmsGoodDamagingPercent() {
         return tmsGoodDamagingPercent;
     }
 
-    public Settings setTmsGoodDamagingPercent(int tmsGoodDamagingPercent) {
+    public void setTmsGoodDamagingPercent(int tmsGoodDamagingPercent) {
         this.tmsGoodDamagingPercent = tmsGoodDamagingPercent;
-        return this;
+    }
+
+    public boolean isBlockBrokenTMMoves() {
+        return blockBrokenTMMoves;
+    }
+
+    public void setBlockBrokenTMMoves(boolean blockBrokenTMMoves) {
+        this.blockBrokenTMMoves = blockBrokenTMMoves;
     }
 
     public TMsHMsCompatibilityMod getTmsHmsCompatibilityMod() {
         return tmsHmsCompatibilityMod;
     }
 
-    public Settings setTmsHmsCompatibilityMod(TMsHMsCompatibilityMod tmsHmsCompatibilityMod) {
-        this.tmsHmsCompatibilityMod = tmsHmsCompatibilityMod;
-        return this;
+    public void setTmsHmsCompatibilityMod(boolean... bools) {
+        setTmsHmsCompatibilityMod(getEnum(TMsHMsCompatibilityMod.class, bools));
     }
 
-    public Settings setTmsHmsCompatibilityMod(boolean... bools) {
-        return setTmsHmsCompatibilityMod(getEnum(TMsHMsCompatibilityMod.class, bools));
+    private void setTmsHmsCompatibilityMod(TMsHMsCompatibilityMod tmsHmsCompatibilityMod) {
+        this.tmsHmsCompatibilityMod = tmsHmsCompatibilityMod;
     }
 
     public MoveTutorMovesMod getMoveTutorMovesMod() {
         return moveTutorMovesMod;
     }
 
-    public Settings setMoveTutorMovesMod(MoveTutorMovesMod moveTutorMovesMod) {
-        this.moveTutorMovesMod = moveTutorMovesMod;
-        return this;
+    public void setMoveTutorMovesMod(boolean... bools) {
+        setMoveTutorMovesMod(getEnum(MoveTutorMovesMod.class, bools));
     }
 
-    public Settings setMoveTutorMovesMod(boolean... bools) {
-        return setMoveTutorMovesMod(getEnum(MoveTutorMovesMod.class, bools));
+    private void setMoveTutorMovesMod(MoveTutorMovesMod moveTutorMovesMod) {
+        this.moveTutorMovesMod = moveTutorMovesMod;
     }
 
     public boolean isTutorLevelUpMoveSanity() {
         return tutorLevelUpMoveSanity;
     }
 
-    public Settings setTutorLevelUpMoveSanity(boolean tutorLevelUpMoveSanity) {
+    public void setTutorLevelUpMoveSanity(boolean tutorLevelUpMoveSanity) {
         this.tutorLevelUpMoveSanity = tutorLevelUpMoveSanity;
-        return this;
     }
 
     public boolean isKeepFieldMoveTutors() {
         return keepFieldMoveTutors;
     }
 
-    public Settings setKeepFieldMoveTutors(boolean keepFieldMoveTutors) {
+    public void setKeepFieldMoveTutors(boolean keepFieldMoveTutors) {
         this.keepFieldMoveTutors = keepFieldMoveTutors;
-        return this;
     }
 
     public boolean isTutorsForceGoodDamaging() {
         return tutorsForceGoodDamaging;
     }
 
-    public Settings setTutorsForceGoodDamaging(boolean tutorsForceGoodDamaging) {
+    public void setTutorsForceGoodDamaging(boolean tutorsForceGoodDamaging) {
         this.tutorsForceGoodDamaging = tutorsForceGoodDamaging;
-        return this;
     }
 
     public int getTutorsGoodDamagingPercent() {
         return tutorsGoodDamagingPercent;
     }
 
-    public Settings setTutorsGoodDamagingPercent(int tutorsGoodDamagingPercent) {
+    public void setTutorsGoodDamagingPercent(int tutorsGoodDamagingPercent) {
         this.tutorsGoodDamagingPercent = tutorsGoodDamagingPercent;
-        return this;
+    }
+
+    public boolean isBlockBrokenTutorMoves() {
+        return blockBrokenTutorMoves;
+    }
+
+    public void setBlockBrokenTutorMoves(boolean blockBrokenTutorMoves) {
+        this.blockBrokenTutorMoves = blockBrokenTutorMoves;
     }
 
     public MoveTutorsCompatibilityMod getMoveTutorsCompatibilityMod() {
         return moveTutorsCompatibilityMod;
     }
 
-    public Settings setMoveTutorsCompatibilityMod(MoveTutorsCompatibilityMod moveTutorsCompatibilityMod) {
-        this.moveTutorsCompatibilityMod = moveTutorsCompatibilityMod;
-        return this;
+    public void setMoveTutorsCompatibilityMod(boolean... bools) {
+        setMoveTutorsCompatibilityMod(getEnum(MoveTutorsCompatibilityMod.class, bools));
     }
 
-    public Settings setMoveTutorsCompatibilityMod(boolean... bools) {
-        return setMoveTutorsCompatibilityMod(getEnum(MoveTutorsCompatibilityMod.class, bools));
+    private void setMoveTutorsCompatibilityMod(MoveTutorsCompatibilityMod moveTutorsCompatibilityMod) {
+        this.moveTutorsCompatibilityMod = moveTutorsCompatibilityMod;
     }
 
     public InGameTradesMod getInGameTradesMod() {
         return inGameTradesMod;
     }
 
-    public Settings setInGameTradesMod(InGameTradesMod inGameTradesMod) {
-        this.inGameTradesMod = inGameTradesMod;
-        return this;
+    public void setInGameTradesMod(boolean... bools) {
+        setInGameTradesMod(getEnum(InGameTradesMod.class, bools));
     }
 
-    public Settings setInGameTradesMod(boolean... bools) {
-        return setInGameTradesMod(getEnum(InGameTradesMod.class, bools));
+    private void setInGameTradesMod(InGameTradesMod inGameTradesMod) {
+        this.inGameTradesMod = inGameTradesMod;
     }
 
     public boolean isRandomizeInGameTradesNicknames() {
         return randomizeInGameTradesNicknames;
     }
 
-    public Settings setRandomizeInGameTradesNicknames(boolean randomizeInGameTradesNicknames) {
+    public void setRandomizeInGameTradesNicknames(boolean randomizeInGameTradesNicknames) {
         this.randomizeInGameTradesNicknames = randomizeInGameTradesNicknames;
-        return this;
     }
 
     public boolean isRandomizeInGameTradesOTs() {
         return randomizeInGameTradesOTs;
     }
 
-    public Settings setRandomizeInGameTradesOTs(boolean randomizeInGameTradesOTs) {
+    public void setRandomizeInGameTradesOTs(boolean randomizeInGameTradesOTs) {
         this.randomizeInGameTradesOTs = randomizeInGameTradesOTs;
-        return this;
     }
 
     public boolean isRandomizeInGameTradesIVs() {
         return randomizeInGameTradesIVs;
     }
 
-    public Settings setRandomizeInGameTradesIVs(boolean randomizeInGameTradesIVs) {
+    public void setRandomizeInGameTradesIVs(boolean randomizeInGameTradesIVs) {
         this.randomizeInGameTradesIVs = randomizeInGameTradesIVs;
-        return this;
     }
 
     public boolean isRandomizeInGameTradesItems() {
         return randomizeInGameTradesItems;
     }
 
-    public Settings setRandomizeInGameTradesItems(boolean randomizeInGameTradesItems) {
+    public void setRandomizeInGameTradesItems(boolean randomizeInGameTradesItems) {
         this.randomizeInGameTradesItems = randomizeInGameTradesItems;
-        return this;
     }
 
     public FieldItemsMod getFieldItemsMod() {
         return fieldItemsMod;
     }
 
-    public Settings setFieldItemsMod(FieldItemsMod fieldItemsMod) {
-        this.fieldItemsMod = fieldItemsMod;
-        return this;
+    public void setFieldItemsMod(boolean... bools) {
+        setFieldItemsMod(getEnum(FieldItemsMod.class, bools));
     }
 
-    public Settings setFieldItemsMod(boolean... bools) {
-        return setFieldItemsMod(getEnum(FieldItemsMod.class, bools));
+    private void setFieldItemsMod(FieldItemsMod fieldItemsMod) {
+        this.fieldItemsMod = fieldItemsMod;
     }
 
     public boolean isBanBadRandomFieldItems() {
         return banBadRandomFieldItems;
     }
 
-    public Settings setBanBadRandomFieldItems(boolean banBadRandomFieldItems) {
+
+    public void setBanBadRandomFieldItems(boolean banBadRandomFieldItems) {
         this.banBadRandomFieldItems = banBadRandomFieldItems;
-        return this;
+    }
+
+    public ShopItemsMod getShopItemsMod() {
+        return shopItemsMod;
+    }
+
+    public void setShopItemsMod(boolean... bools) {
+        setShopItemsMod(getEnum(ShopItemsMod.class, bools));
+    }
+
+    private void setShopItemsMod(ShopItemsMod shopItemsMod) {
+        this.shopItemsMod = shopItemsMod;
+    }
+
+    public boolean isBanBadRandomShopItems() {
+        return banBadRandomShopItems;
+    }
+
+    public void setBanBadRandomShopItems(boolean banBadRandomShopItems) {
+        this.banBadRandomShopItems = banBadRandomShopItems;
+    }
+
+    public boolean isBanRegularShopItems() {
+        return banRegularShopItems;
+    }
+
+    public void setBanRegularShopItems(boolean banRegularShopItems) {
+        this.banRegularShopItems = banRegularShopItems;
+    }
+
+    public boolean isBanOPShopItems() {
+        return banOPShopItems;
+    }
+
+    public void setBanOPShopItems(boolean banOPShopItems) {
+        this.banOPShopItems = banOPShopItems;
+    }
+
+    public boolean isBalanceShopPrices() {
+        return balanceShopPrices;
+    }
+
+    public void setBalanceShopPrices(boolean balanceShopPrices) {
+        this.balanceShopPrices = balanceShopPrices;
+    }
+   
+    public boolean isGuaranteeEvolutionItems() {
+        return guaranteeEvolutionItems;
+    }
+
+    public void setGuaranteeEvolutionItems(boolean guaranteeEvolutionItems) {
+        this.guaranteeEvolutionItems = guaranteeEvolutionItems;
+    }
+
+    public boolean isGuaranteeXItems() {
+        return guaranteeXItems;
+    }
+
+    public void setGuaranteeXItems(boolean guaranteeXItems) {
+        this.guaranteeXItems = guaranteeXItems;
     }
 
     private static int makeByteSelected(boolean... bools) {
@@ -1543,7 +2130,7 @@ public class Settings {
         out.write((value >> 8) & 0xFF);
     }
 
-    public static <E extends Enum<E>> E restoreEnum(Class<E> clazz, byte b, int... indices) {
+    private static <E extends Enum<E>> E restoreEnum(Class<E> clazz, byte b, int... indices) {
         boolean[] bools = new boolean[indices.length];
         int i = 0;
         for (int idx : indices) {
@@ -1554,7 +2141,7 @@ public class Settings {
     }
 
     @SuppressWarnings("unchecked")
-    public static <E extends Enum<E>> E getEnum(Class<E> clazz, boolean... bools) {
+    private static <E extends Enum<E>> E getEnum(Class<E> clazz, boolean... bools) {
         int index = getSetEnum(clazz.getSimpleName(), bools);
         try {
             return ((E[]) clazz.getMethod("values").invoke(null))[index];
